syntax = "proto3";

option csharp_namespace = "RapidTime.Api";

import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

package timeregistration;

service TimeRegistration {
  rpc CreateTimeRegistration (CreateTimeRegistrationRequest) returns (TimeRegistrationResponse);
  rpc GetTimeRegistrationByAssignmentId (GetTimeRegistrationByAssignmentIdRequest) returns (MultiTimeRegistrationResponse);
}

message GetTimeRegistrationByAssignmentIdRequest {
  int32 Id = 1; 
}

message MultiTimeRegistrationResponse {
  repeated TimeRegistrationBase TimeRegistrations = 1; 
}

message CreateTimeRegistrationRequest {
  TimeRegistrationBase TimeRegistration = 1;
}

message TimeRegistrationResponse {
  bool success = 1; 
}

message TimeRegistrationBase {
  int32 Id = 1;
  google.protobuf.Duration TimeRecorded = 2;
  int32 assignmentId = 3;
}